--- a/src/chart/chart.css
+++ b/src/chart/chart.css
@@ -22,6 +22,23 @@
     min-height: 160px;
 }
 
+.canvas * {
+    vector-effect: non-scaling-stroke;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 0.1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.canvas path {
+    animation: blink ease-in-out 1s infinite alternate;
+}
+
 .toggles {
     margin: 8px -7px -7px;
     display: flex;
