--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -20,12 +20,12 @@
   width: 100%;
   flex: auto;
   min-height: 160px;
+  display: flex;
 }
 
-.chart > canvas,
-.chart > svg {
+.canvas {
+  flex: 1;
   width: 100%;
-  height: 100%;
 }
 
 .toggles {
