Reimplement the whole chart with PixiJS

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 :global(body) {
   margin: 0;
   padding: 0;
-  font-family: Helvetica, sans-serif;
+  /* font-family is set through the JS */
 }
 
 .chart {
