--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 410px;
-  max-height: 100vh;
+  max-height: calc(100vh - 50px);
 }
 
 .root > * {
@@ -35,12 +35,29 @@
 
 .fade {
   position: absolute;
+  overflow: hidden;
   z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
   height: 18px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+}
+/* linear-gradients don't have transitions so I have to do this */
+.fade::before {
+  content: '';
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  right: -20px;
+  bottom: 100%;;
+  transition: box-shadow ease-in-out;
+  transition-duration: inherit;
+}
+:global(.dayTheme) .fade::before {
+  box-shadow: 0 9px 18px #fff;
+}
+:global(.nightTheme) .fade::before {
+  box-shadow: 0 9px 18px #242f3e;
 }
 
 .toggles {
@@ -71,11 +88,17 @@
   flex: none;
   box-sizing: border-box;
   max-width: 90%;
-  padding: 8px 6px;
-  background: #fff;
+  padding: 6px 8px;
   border-radius: 4px;
   box-shadow: 0 0 1.5px rgba(0, 0, 0, 0.5);
   will-change: contents, transform, opacity;
+  transition: background ease-in-out;
+}
+:global(.dayTheme) .detailsContent {
+  background: #fff;
+}
+:global(.nightTheme) .detailsContent {
+  background: #253241;
 }
 
 .detailsHeader {
