--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -49,7 +49,7 @@
   top: -20px;
   left: -20px;
   right: -20px;
-  bottom: 100%;;
+  bottom: 100%;
   transition: box-shadow ease-in-out;
   transition-duration: inherit;
 }
