--- a/src/view/columnDetails/columnDetails.css
+++ b/src/view/columnDetails/columnDetails.css
@@ -11,7 +11,7 @@
   flex: none;
   box-sizing: border-box;
   max-width: 90%;
-  padding: 6px 8px;
+  padding: 6px 8px 5px;
   border-radius: 4px;
   box-shadow: 0 0 1.5px rgba(0, 0, 0, 0.5);
   will-change: contents, transform, opacity;
@@ -26,7 +26,7 @@
 
 .header {
   font-size: 12px;
-  margin-bottom: 7px;
+  margin-bottom: 8px;
 }
 
 .values {
