--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -16,15 +16,14 @@
   font-weight: bold;
 }
 
-.chart {
-  width: 100%;
-  flex: auto;
-  min-height: 160px;
+.chartMain,
+.chartMap {
   position: relative;
   -webkit-tap-highlight-color: transparent;
 }
 
-.canvas {
+.chartMain canvas,
+.chartMap canvas {
   position: absolute;
   z-index: 0;
   top: 0;
@@ -32,6 +31,17 @@
   width: 100%;
   height: 100%;
   user-select: none;
+}
+
+.chartMain {
+  flex: auto;
+  min-height: 120px;
+}
+
+.chartMap {
+  flex: none;
+  height: 38px;
+  margin: 0 12px;
 }
 
 .toggles {
