--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -44,6 +44,91 @@
   margin: 0 12px;
 }
 
+.chartMapRoundBox {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  /* todo: Check how overflow with border-radius affect performance */
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.selectorOutside {
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  transition-property: background-color;
+}
+:global(.dayTheme) .selectorOutside {
+  background-color: rgba(226, 238, 249, 0.6);
+}
+:global(.nightTheme) .selectorOutside {
+  background-color: rgba(48, 66, 89, 0.6);
+}
+.selectorOutside.left {
+  left: 0;
+  transform-origin: 0 0;
+}
+.selectorOutside.right {
+  right: 0;
+  transform-origin: 100% 0;
+}
+
+.selectorBorder {
+  position: absolute;
+  transition-property: background-color;
+}
+:global(.dayTheme) .selectorBorder {
+  background-color: #C0D1E1;
+}
+:global(.nightTheme) .selectorBorder {
+  background-color: #56626D;
+}
+.selectorBorder.left,
+.selectorBorder.right,
+.selectorBorder.top {
+  top: -1px;
+}
+.selectorBorder.left,
+.selectorBorder.right,
+.selectorBorder.bottom {
+  bottom: -1px;
+}
+.selectorBorder.left,
+.selectorBorder.right {
+  cursor: ew-resize;
+}
+.selectorBorder.left::before,
+.selectorBorder.right::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2px;
+  height: 10px;
+  border-radius: 1px;
+  margin: -5px -1px;
+  background: #fff;
+}
+.selectorBorder.left {
+  left: 0;
+  border-radius: 6px 0 0 6px;
+}
+.selectorBorder.right {
+  right: 0;
+  border-radius: 0 6px 6px 0;
+}
+.selectorBorder.top,
+.selectorBorder.bottom {
+  width: 1px;
+  height: 1px;
+  transform-origin: 0 0;
+}
+
 .toggles {
   margin: 8px 5px -7px;
   display: flex;
