--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -44,16 +44,8 @@
   margin: 0 12px;
 }
 
-.chartMapRoundBox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  /* todo: Check how overflow with border-radius affect performance */
+.chartMap canvas {
   border-radius: 5px;
-  overflow: hidden;
 }
 
 .selectorOutside {
@@ -69,10 +61,12 @@
   background-color: rgba(48, 66, 89, 0.6);
 }
 .selectorOutside.left {
+  border-radius: 5px 0 0 5px;
   left: 0;
   transform-origin: 0 0;
 }
 .selectorOutside.right {
+  border-radius: 0 5px 5px 0;
   right: 0;
   transform-origin: 100% 0;
 }
