--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -9,10 +9,24 @@
   flex: none;
 }
 
-.name {
-  margin: 0;
+.header {
+  display: flex;
+  align-items: center;
   padding: 0 12px;
+}
+
+.name {
+  flex: none;
+  width: 30%;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
+  font-weight: bold;
+}
+
+.range {
+  flex: auto;
+  font-size: 14px;
   font-weight: bold;
 }
 
