--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -30,129 +30,26 @@
   font-weight: bold;
 }
 
-.chartMain,
-.chartMap {
+.chart {
+  flex: auto;
+  min-height: 160px;
   position: relative;
+}
+
+.chart canvas {
   user-select: none;
   -webkit-tap-highlight-color: transparent;
-}
-
-.chartMain canvas,
-.chartMap canvas {
   position: absolute;
+}
+.chart .mapCanvas {
+  z-index: 0;
+}
+.chart .mainCanvas {
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.chartMain {
-  flex: auto;
-  min-height: 120px;
-}
-
-.chartMap {
-  flex: none;
-  height: 38px;
-  margin: 0 12px;
-}
-
-.chartMap canvas {
-  border-radius: 5px;
-}
-
-/*
-  iOS Safari doesn't prevent a touchstart event if it was emitted near an edge of the target.
-  This block increases the target area.
-*/
-.touchCatcher {
-  position: absolute;
-  top: 0;
-  right: -12px;
-  bottom: 0;
-  left: -12px;
-}
-
-.selectorOutsideBox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  overflow: hidden;
-  transform: translate3d(0, 0, 0); /* Forces the round corners in Safari */
-}
-.selectorOutside {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transition-property: background-color;
-}
-:global(.dayTheme) .selectorOutside {
-  background-color: rgba(226, 238, 249, 0.6);
-}
-:global(.nightTheme) .selectorOutside {
-  background-color: rgba(48, 66, 89, 0.6);
-}
-.selectorOutside.left {
-  transform-origin: 0 0;
-}
-.selectorOutside.right {
-  transform-origin: 100% 0;
-}
-
-.selectorBorder {
-  position: absolute;
-  transition-property: background-color;
-}
-:global(.dayTheme) .selectorBorder {
-  background-color: #C0D1E1;
-}
-:global(.nightTheme) .selectorBorder {
-  background-color: #56626D;
-}
-.selectorBorder.left,
-.selectorBorder.right,
-.selectorBorder.top {
-  top: -1px;
-}
-.selectorBorder.left,
-.selectorBorder.right,
-.selectorBorder.bottom {
-  bottom: -1px;
-}
-.selectorBorder.left,
-.selectorBorder.right {
-  cursor: ew-resize;
-}
-.selectorBorder.left::before,
-.selectorBorder.right::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 2px;
-  height: 10px;
-  border-radius: 1px;
-  margin: -5px -1px;
-  background: #fff;
-}
-.selectorBorder.left {
-  left: 0;
-  border-radius: 6px 0 0 6px;
-}
-.selectorBorder.right {
-  right: 0;
-  border-radius: 0 6px 6px 0;
-}
-.selectorBorder.top,
-.selectorBorder.bottom {
-  height: 1px;
-  width: 100%;
-  transform-origin: 0 0;
 }
 
 .toggles {
@@ -167,6 +64,7 @@
 
 .details {
   position: absolute;
+  z-index: 100;
   bottom: 83%;
   left: 6px;
   right: 6px;
