--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -9,30 +9,18 @@
   flex: none;
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  padding: 0 12px;
-}
-
 .name {
   flex: none;
-  width: 30%;
-  margin: 0;
-  padding: 0;
   font-size: 16px;
   font-weight: bold;
-}
-
-.range {
-  flex: auto;
-  font-size: 14px;
-  font-weight: bold;
+  margin: 0 245px -28px 0;
+  padding: 0 12px;
+  z-index: 10;
 }
 
 .chart {
   flex: auto;
-  min-height: 160px;
+  min-height: 190px;
   position: relative;
   -webkit-tap-highlight-color: transparent;
 }
