--- a/src/view/toggleButton/toggleButton.css
+++ b/src/view/toggleButton/toggleButton.css
@@ -16,8 +16,21 @@
   font-weight: 500;
   text-align: center;
   background: none;
-  transition: all 0.4s ease-in-out;
   -webkit-tap-highlight-color: transparent;
+}
+
+.background {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  border-radius: 18px;
+  opacity: 0; /* Changing opacity instead of color eliminates the paint stage thus making the animation smoother */
+  transition: opacity 0.4s ease-in-out;
+}
+.on .background {
+  opacity: 1;
 }
 
 .checkmark > i {
@@ -49,11 +62,29 @@
 }
 
 .name {
+  position: relative;
   color: #fff;
   margin: 0 21px;
-  transform: translateX(0);
-  transition: all 0.4s ease-in-out;
 }
-.on .name {
+.name > span {
+  display: block;
+  transition: all 0.4s ease-in-out;
+  transform: translateX(0);
+}
+.name > span:nth-child(2) {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.on .name > span {
   transform: translateX(8px);
+}
+.on .name > span:nth-child(1) {
+  opacity: 0;
+}
+.on .name > span:nth-child(2) {
+  opacity: 1;
 }
