--- a/src/view/toggleButton/toggleButton.css
+++ b/src/view/toggleButton/toggleButton.css
@@ -16,6 +16,7 @@
   font-weight: 500;
   text-align: center;
   background: none;
+  user-select: none; /* To prevent the context menu on a long touch  */
   -webkit-tap-highlight-color: transparent;
 }
 
