--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -1,27 +1,20 @@
-.root {
-  display: flex;
-  flex-direction: column;
-  height: 410px;
-  max-height: calc(100vh - 50px);
-}
-
-.root > * {
-  flex: none;
+.chart, .name {
+  /* CSSO fails to build when this property is inside .name for some reason */
+  position: relative;
 }
 
 .name {
-  flex: none;
+  z-index: 10;
   font-size: 16px;
   font-weight: bold;
   margin: 0 245px -28px 0;
   padding: 0 12px;
-  z-index: 10;
 }
 
 .chart {
-  flex: auto;
-  min-height: 190px;
-  position: relative;
+  height: calc(100vh - 60px);
+  min-height: 260px;
+  max-height: 392px;
   -webkit-tap-highlight-color: transparent;
 }
 
