--- a/src/view/chart/chart.css
+++ b/src/view/chart/chart.css
@@ -7,8 +7,15 @@
   z-index: 10;
   font-size: 16px;
   font-weight: bold;
-  margin: 0 245px -28px 0;
+  margin: 0 270px -28px 0;
   padding: 0 12px;
+}
+
+@media (max-width: 360px) {
+  .name {
+    font-size: 4.44vw;
+    margin-right: 75%;
+  }
 }
 
 .chart {
